--- a/Razor/Views/_BasicLayout.cshtml
+++ b/Razor/Views/_BasicLayout.cshtml
@@ -6,8 +6,15 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div>
+    <h1>Product Information</h1>
+    <div style="padding: 20px; border: solid medium black; font-size: 20pt">
         @RenderBody()
-    </div>
+    </div>    
+    <h2></h2>
+    @* 
+            @RenderBody() insert content of view specified by action method 
+            Elements in layout will be applied to any view that usues the layout   
+        *@
+    
 </body>
 </html>
