--- a/Razor/Views/_BasicLayout.cshtml
+++ b/Razor/Views/_BasicLayout.cshtml
@@ -10,11 +10,11 @@
     <div style="padding: 20px; border: solid medium black; font-size: 20pt">
         @RenderBody()
     </div>    
-    <h2></h2>
+    <h2>Visit <a href="http://www.greatcall.com">GreatCall</a></h2>
     @* 
             @RenderBody() insert content of view specified by action method 
             Elements in layout will be applied to any view that usues the layout   
-        *@
+    *@
     
 </body>
 </html>
